<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="wechatedittool.com.wechatedittool.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/main_title"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/main_tv_link"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_edit"
        android:gravity="top"
        android:hint="@string/main_warning"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/main_btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:text="@string/main_btn_reset"/>

        <Button
            android:id="@+id/main_btn_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:text="@string/main_btn_open"/>
    </LinearLayout>

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></WebView>

</LinearLayout>
