<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="wechatedittool.com.wechatedittool.EditActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="5dp">

        <TextView
            android:id="@+id/edit_tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/edit_tv_back"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/edit_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/edit_tv_title"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>


        <TextView
            android:id="@+id/edit_tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/edit_tv_save"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    </RelativeLayout>


</LinearLayout>
